tests/ui/mismatched_types/for-loop-in-vec-type-mismatchrs-50585.stderr
error[E0308]: mismatched types
  --> $DIR/for-loop-in-vec-type-mismatchrs-50585.rs:3:18
   |
LL |     |y: Vec<[(); for x in 0..2 {}]>| {};
   |                  ^^^^^^^^^^^^^^^^ expected `usize`, found `()`
   |
   = note: `for` loops evaluate to unit type `()`
help: consider returning a value here
   |
LL |     |y: Vec<[(); for x in 0..2 {} /* `usize` value */]>| {};
   |                                   +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
